--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="jp.co.atschool.myquiz">
 
     <application
+        android:name=".MyQuizApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon3"
         android:label="@string/app_name"
