--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'io.realm:android-adapters:2.0.0'
     implementation 'com.android.support:recyclerview-v7'
+    compile 'com.github.medyo:fancybuttons:1.8.4'
+    compile 'com.github.johnpersano:supertoasts:2.0'
+    implementation 'com.beardedhen:androidbootstrap:2.3.2'
 }
