--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "jp.co.atschool.tdfkChallenge"
-        minSdkVersion 24//16
+        minSdkVersion 24//16//24
         targetSdkVersion 26
-        versionCode 5
-        versionName "1.1.0"
+        versionCode 6
+        versionName "2.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
